--- a/clicky-game/package.json
+++ b/clicky-game/package.json
@@ -2,6 +2,10 @@
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.5.0",
+    "node": "v11.9.0"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
